--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mapbox/mapbox-sdk": "^0.16.0",
     "@simonsmith/ejs-mate": "^4.1.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
