--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.16.0",
     "@simonsmith/ejs-mate": "^4.1.0",
+    "cloudinary": "^2.2.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
